# git_tutorial

./: .gitignore  0r_ecm_on.sh  sample.txt
EC-Master_SDK/INC/: AtEmRasClnt.h  AtEmRasClntVersion.h  AtEmRasError.h  AtEmRasSrv.h  AtEmRasSrvVersion.h  AtEmRasType.h  AtEthercat.h  CFiFoList.h  CList.h  ECMotionControl.h  EcCommon.h  EcError.h  EcEscReg.h  EcInterfaceCommon.h  EcLink.h  EcObjDef.h  EcOs.h  EcType.h  EcVersion.h  EthernetServices.h
EC-Master_SDK/INC/Linux/: EcOsPlatform.h  expat_os.h
EC_Hydra/: .gitignore  1r_ecmaster_start.sh  1r_ecmaster_start_dbg.sh  1r_ecmaster_start_lowerbody.sh  1r_ecmaster_start_singlebox.sh  1r_ecmaster_start_upperbody.sh  CMakeLists.txt  DCDemo.cpp  DCDemo.h  DCDemoConfig.h  DCDemoMain.cpp  Logging.cpp  Logging.h  SlaveInfo.h  TimeoutHelper.cpp  TimeoutHelper.h  ecatDemoCommon.cpp  ecatDemoCommon.h  ecatNotification.cpp  ecatNotification.h  hydra_gain_generator.py  run_ecmaster_lowerbody.sh  run_ecmaster_onearm.sh  run_ecmaster_singlebox.sh  run_ecmaster_tandem.sh  run_ecmaster_upperbody.sh  run_ecmaster_wholebody.sh  selectLinkLayer.cpp  selectLinkLayer.h  trqsrv.cpp  trqsrv.h
EC_Hydra/config/: ec_hydra_config.xml
EC_Hydra/python/: hydra_gain_common.py  hydra_gain_generator.py  hydra_gain_singleaxis.py  hydra_gain_wholebody.py
ENI/: 3m_tandem_3m.xml  3m_tandem_3m_hand.xml  ET9000_TAMAx7_CU1561_SYNC_1000_devname.xml  box_3mx1_20160108.xml  box_tandemx1.xml  hydra20150421.xml  hydra20150511.xml  hydra20150703_10nodes.xml  hydra20150703_11nodes.xml  hydra20150703_12nodes.xml  hydra20150703_13nodes.xml  hydra20150703_14nodes.xml  hydra20150703_15nodes.xml  hydra20150703_1node.xml  hydra20150703_2nodes.xml  hydra20150703_3nodes.xml  hydra20150703_4nodes.xml  hydra20150703_5nodes.xml  hydra20150703_6nodes.xml  hydra20150703_7nodes.xml  hydra20150703_8nodes.xml  hydra20150703_9nodes.xml  hydra20150901_rhand.xml  hydra_leg_20150515.xml  hydra_lowerbody_20161031_DC.xml  hydra_lowerbody_20161031_SM.xml  hydra_lowerbodywithoutIMU_20161122SM.xml  hydra_no_hands_20150723.xml  hydra_rhand_only_20150803.xml  hydra_upperbody_20161031_DC.xml  hydra_upperbody_20161031_SM.xml  hydra_wholebody_20150525.xml  hydra_wholebody_20150526.xml  hydra_wholebody_20150527.xml  hydra_wholebody_20150531_test2.xml  hydra_wholebody_20150531_test3.xml  hydra_wholebody_20150625.xml  hydra_wholebody_20151215.xml  hydra_wholebody_20160108_DC.xml  hydra_wholebody_20160108_SM.xml  (+2 more)
build-robot_console-Desktop-Default/: CTestTestfile.cmake  HydraConsole.cbp  HydraConsole.pc  cmake_install.cmake  config.h
build-robot_console-Desktop-Default/cmake/: cmake_uninstall.cmake
build-robot_console-Desktop-Default/doc/: Doxyfile  Doxyfile.extra
build-robot_console-Desktop-Default/include/hydraconsole/: config.hh  deprecated.hh  warning.hh
common/: 7arm_id.h  comm_common_def.h  robot_id.h
control/: HydraWalkingControl.cpp  HydraWalkingControl.h
control/HydraPosControl/: CMakeLists.txt  HydraPosControl.cpp  HydraPosControl.h
hydra_common/: CalcForceTorque.cpp  CalcForceTorque.h  CalcParallelJoint.cpp  CalcParallelJoint.h  cbutter20.cpp  cbutter20.h  chydraconfigloader.cpp  chydraconfigloader.h  chydraconfigloader2.cpp  chydraconfigloader2.h  chydradata.cpp  chydradata.h  chydradatamanager.cpp  chydradatamanager.h  chydradatarec.cpp  chydradatarec.h  chydrajrtpcomm.cpp  chydrajrtpcomm.h  chydrashm.h  chydrashmclient.cpp  chydrashmclient.h  chydrashmserver.cpp  chydrashmserver.h  cipcomm.h  cudpcomm.cpp  cudpcomm.h  cxmlconfig.cpp  cxmlconfig.h  hydra.h  hydra_gains.h  hydra_types.h  ihydraipc.h  robot_hydra_id.h
hydra_common/kinematics/: chydrakinematics.cpp  chydrakinematics.h  hydra_kinematics.h
model/: hydra.wrl
robot_console/: .gitignore  CMakeLists.txt  HydraConsole.sh  HydraConsole_debugmode.sh  chydradatalogger.cpp  chydradatalogger.h  cthreaddata.cpp  cthreaddata.h  roshydra.cpp  roshydra.h  servo_ui.cpp  servo_ui.h  user_interface.cpp  user_interface.h  walk.cpp  walk.h
robot_console/cmake/: cmake_uninstall.cmake  dynamic_graph_bridge-genmsg-context.py  dynamic_graph_bridge-genmsg.cmake
