project(HydraECAT)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_BUILD_TYPE Debug)
add_definitions(-DHAVE_CONFIG_H -DLINUX)
set(SRC_LIST DCDemo.cpp DCDemoMain.cpp Logging.cpp TimeoutHelper.cpp ecatDemoCommon.cpp ecatNotification.cpp selectLinkLayer.cpp trqsrv.cpp ../hydra_common/CalcParallelJoint.cpp ../hydra_common/CalcForceTorque.cpp ../hydra_common/chydrashmserver.cpp)
include_directories(../common)
include_directories(../hydra_common)
include_directories(../EC-Master_SDK/INC)
include_directories(../EC-Master_SDK/INC/Linux)
link_directories(/usr/local/lib)
link_directories(../EC-Master_SDK/LIB/Linux/x64)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} EcMaster AtemRasSrv pthread dl rt)

